Bugfix: each span in a multi-line date should not wrap

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -76,6 +76,10 @@
   flex-direction: row;
 }
 
+.dates-as-spans > span {
+  white-space: nowrap;
+}
+
 .event-metadata {
   display: inline-flex;
   align-items: center;
